# cli-sub-agent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FIX_PROPOSAL.md  README.md  SKILL.md  cliff.toml  deny.toml  details.md  install.sh  justfile  lefthook.yml  mise.toml  prompt.txt  skill.md  summary.md  test_gate_timeout_fix.rs
crates/cli-sub-agent/: Cargo.toml  build.rs
crates/cli-sub-agent/src/: arch_cmd.rs  audit_cmds.rs  batch.rs  batch_catalog.rs  batch_catalog_tests.rs  batch_resource.rs  batch_tests.rs  batch_types.rs  bug_class.rs  bug_class_sanitization.rs  bug_class_tests.rs  build_jobs_env.rs  caller_hints_tests.rs  cargo_env_normalize_script_tests.rs  checklist_cmd.rs  claude_sub_agent_cmd.rs  claude_sub_agent_cmd_tests.rs  cli.rs  cli_arch.rs  cli_checklist.rs  cli_commands.rs  cli_common.rs  cli_debate.rs  cli_dev2merge.rs  cli_doctor.rs  cli_health.rs  cli_memory.rs  cli_mktsk.rs  cli_plan.rs  cli_recall.rs  cli_review.rs  cli_review_convergence.rs  cli_review_repair.rs  cli_session.rs  cli_skill.rs  cli_todo.rs  cli_tokuin.rs  cli_triage.rs  cli_verify.rs  cli_xurl.rs  (+731 more)
crates/cli-sub-agent/tests/: arch_e2e.rs  cli_run_branch_guard.rs  config_get_global_warning_e2e.rs  config_get_state_dir_e2e.rs  config_get_vcs_e2e.rs  config_primary_writer_spec_e2e.rs  config_redaction_e2e.rs  config_show_transport_e2e.rs  daemon_stderr_e2e.rs  e2e.rs  hunt_e2e.rs  mcp_hub_e2e.rs  merge_e2e.rs  model_catalog_e2e.rs  review_mode_compat.rs  run_noop_tracked_drift.rs  run_wait_memory_admission.rs  session_registry_loss.rs  session_summary_visibility.rs  session_wait_provider_ttl.rs  skill_resource_inheritance.rs  tier_policy_ux.rs  todo_create_stdout.rs  xurl_codex_recall_e2e.rs
crates/csa-acp/: Cargo.toml
crates/csa-acp/src/: client.rs  connection.rs  connection_env.rs  connection_fork.rs  connection_initial_response_tests.rs  connection_sandbox_handle.rs  connection_spawn.rs  connection_spawn_tests.rs  connection_status.rs  connection_stream.rs  connection_tests.rs  connection_tool_output_compaction_tests.rs  error.rs  lib.rs  mcp_proxy_client.rs  prefix_extract.rs  session_config.rs  tool_output_compaction.rs  transport.rs
crates/csa-eval/: Cargo.toml
crates/csa-eval/src/: lib.rs  scanner.rs
crates/csa-executor/: Cargo.toml
crates/csa-executor/src/: agent_backend_adapter.rs  claude_runtime.rs  codex_runtime.rs  command_isolation.rs  context_loader.rs  design_context.rs  executor.rs  executor_antigravity_settings.rs  executor_arg_helpers.rs  executor_build_cmd_preamble_tests.rs  executor_build_cmd_resume_tests.rs  executor_build_cmd_tests.rs  executor_build_cmd_tests_git_push.rs  executor_build_cmd_tests_part2.rs  executor_clean_room.rs  executor_clean_room_tests.rs  executor_codex_tmux.rs  executor_command.rs  executor_env.rs  executor_options.rs  executor_pre_session.rs  executor_prompt_helpers.rs  executor_prompt_transport_tests.rs  executor_restrictions.rs  executor_runtime_transport.rs  executor_tests.rs  executor_tests_tail.rs  executor_timeout_forwarding_tests.rs  executor_tool_args.rs  hermes_config.rs  install_hints.rs  lefthook_guard.rs  lib.rs  logging.rs  model_spec.rs  model_spec_tests.rs  session_config.rs  session_id.rs  transport.rs  transport_acp_crash_retry.rs  (+46 more)
crates/csa-executor/tests/: model_catalog.rs
crates/csa-hooks/: Cargo.toml
crates/csa-hooks/src/: audit.rs  config.rs  directive.rs  event.rs  event_bus.rs  git_guard.rs  git_guard_tests.rs  guard.rs  guard_tests.rs  lib.rs  mempal_capture.rs  merge_guard.rs  policy.rs  pre_session.rs  runner.rs  waiver.rs
crates/csa-lock/: Cargo.toml
crates/csa-lock/src/: lib.rs  lib_tests.rs  slot.rs  worktree.rs  worktree_reclaim_tests.rs  worktree_tests.rs
crates/csa-mcp-hub/: Cargo.toml
crates/csa-mcp-hub/src/: config.rs  lib.rs  proxy.rs  registry.rs  registry_http.rs  registry_pool.rs  registry_tests.rs  serve.rs  serve_control.rs  serve_tests.rs  skill_writer.rs  skill_writer_tests.rs  socket.rs
crates/csa-memory/: Cargo.toml
crates/csa-memory/src/: consolidation.rs  entry.rs  ephemeral_client.rs  index.rs  lib.rs  llm_client.rs  mempal_detect.rs  noop_client.rs  resolve_backend.rs  store.rs
crates/csa-process/: Cargo.toml
crates/csa-process/src/: command_environment.rs  daemon.rs  daemon_cleanup.rs  daemon_lifecycle_tests.rs  daemon_stderr.rs  daemon_tests.rs  idle_watchdog.rs  idle_watchdog_provider_error_tests.rs  lib.rs  lib_execution_result.rs  lib_execution_result_tests.rs  lib_output_helpers.rs  lib_spawn.rs  lib_spawn_clean_tests.rs  lib_spawn_tests.rs  lib_subprocess_helpers.rs  lib_tests.rs  lib_tests_boundary.rs  lib_tests_compaction_death.rs  lib_tests_heartbeat.rs  lib_tests_retry.rs  lib_tests_signal_exit.rs  lib_tests_stderr_dedup.rs  lib_tests_tail.rs  lib_wait_capture.rs  persistent_rate_limit.rs  process_activity.rs  process_activity_tests.rs  pty_fork.rs  signal_exit.rs  tool_liveness.rs  tool_liveness_fatal_error.rs  tool_liveness_tests.rs  workspace_boundary.rs
crates/csa-resource/: Cargo.toml
crates/csa-resource/src/: bwrap.rs  bwrap_tests.rs  bwrap_tests_virtual.rs  cgroup.rs  cgroup_tests.rs  filesystem_sandbox.rs  guard.rs  guard_tests.rs  isolation_plan.rs  isolation_plan_claude.rs  isolation_plan_claude_tests.rs  isolation_plan_codex.rs  isolation_plan_daemon_ipc_tests.rs  isolation_plan_path_tests.rs  isolation_plan_runtime_path.rs  isolation_plan_rust_env.rs  isolation_plan_rust_env_tests.rs  isolation_plan_tests.rs  isolation_plan_tests_tail.rs  isolation_plan_tmpdir_tests.rs  isolation_plan_validation.rs  landlock.rs  landlock_stub.rs  lib.rs  memory_balloon.rs  memory_monitor.rs  memory_policy.rs  monitor.rs  rlimit.rs  sandbox.rs  stats.rs
crates/csa-resource/tests/: bwrap_extra_writable_file.rs
crates/csa-scheduler/: Cargo.toml
crates/csa-scheduler/src/: failover.rs  failover_tests.rs  lib.rs  rate_limit.rs  rate_limit_tests.rs  rotation.rs  rotation_tests_tail.rs  seed_session.rs  seed_session_tests.rs  session_reuse.rs
crates/csa-session/: Cargo.toml
crates/csa-todo/: Cargo.toml
crates/weave/: Cargo.toml  build.rs
docs/: hooks.md  (+14 more)
(+618 files in other folders)
