[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.38"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
csa-core = { path = "crates/csa-core" }
csa-memory = { path = "crates/csa-memory" }
csa-session = { path = "crates/csa-session" }
csa-lock = { path = "crates/csa-lock" }
csa-executor = { path = "crates/csa-executor" }
csa-process = { path = "crates/csa-process" }
csa-config = { path = "crates/csa-config" }
csa-resource = { path = "crates/csa-resource" }
csa-scheduler = { path = "crates/csa-scheduler" }
csa-todo = { path = "crates/csa-todo" }
csa-hooks = { path = "crates/csa-hooks" }
csa-mcp-hub = { path = "crates/csa-mcp-hub" }
weave = { path = "crates/weave" }
agent-teams = { git = "https://github.com/ZhangHanDong/agent-teams-rs.git", default-features = false }

# CLI & Async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.1", features = ["serde"] }

# Error handling & logging
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# System
directories = "5.0"
fd-lock = "4.0"
sysinfo = "0.32"
which = "7.0"
libc = "0.2"
tempfile = "3.10"

# Utilities
regex = "1.11"
sha2 = "0.10"
glob = "0.3"
ignore = "0.4"
tantivy = "0.22"
