[package]
name = "cli-sub-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "csa"
path = "src/main.rs"

[dependencies]
csa-core.workspace = true
csa-eval.workspace = true
csa-session.workspace = true
csa-lock.workspace = true
csa-acp = { path = "../csa-acp" }
csa-executor.workspace = true
csa-process.workspace = true
csa-config.workspace = true
csa-resource.workspace = true
csa-scheduler.workspace = true
csa-todo.workspace = true
csa-hooks.workspace = true
csa-mcp-hub.workspace = true
csa-memory.workspace = true
weave.workspace = true
clap.workspace = true
tokio.workspace = true
libc.workspace = true
fd-lock.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
ulid.workspace = true
sysinfo.workspace = true
directories.workspace = true
which.workspace = true
glob.workspace = true
ignore.workspace = true
regex.workspace = true
sha2.workspace = true
tokuin.workspace = true
xurl-core.workspace = true

[dev-dependencies]
serial_test = "3.4"

[features]
codex-pty-fork = ["csa-executor/codex-pty-fork"]
