[package]
name = "csa-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
