[package]
name = "csa-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
csa-core.workspace = true
csa-session.workspace = true
csa-process.workspace = true
csa-resource.workspace = true
csa-acp = { path = "../csa-acp" }
csa-hooks = { path = "../csa-hooks" }
agent-teams.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true

[features]
default = []
codex-acp = []
codex-pty-fork = ["csa-process/codex-pty-fork"]

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
