[package]
name = "csa-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
csa-core.workspace = true
csa-session.workspace = true
csa-process.workspace = true
csa-resource.workspace = true
csa-acp = { path = "../csa-acp" }
csa-hooks = { path = "../csa-hooks" }
agent-teams.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true

[features]
default = []
# Gate codex ACP transport behind this feature.
# Disabled by default in favour of `codex exec resume <id>` CLI native resume
# (codex-cli 0.125.0+), which is empirically equivalent to ACP loadSession on
# server-side cache reuse (54%, 44,800/83,503 input tokens, #760 / #1128).
# Enable with `--features codex-acp` when investigating the ACP path.
codex-acp = []
codex-pty-fork = ["csa-process/codex-pty-fork"]
# Gate claude-code ACP transport behind this feature.
# Disabled by default due to startup-crash bugs (#1115, #1117).
# Enable with `--features claude-code-acp` when investigating the ACP path.
claude-code-acp = []

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
