[package]
name = "csa-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csa-config.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tempfile.workspace = true
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
