[package]
name = "csa-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
async-hooks = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csa-config.workspace = true
csa-memory.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tempfile.workspace = true
toml = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
which.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
serial_test = "3.4"
tempfile.workspace = true
