[package]
name = "csa-mcp-hub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
rmcp-sdk = ["dep:rmcp"]

[dependencies]
csa-config.workspace = true
csa-process.workspace = true
csa-resource.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
libc.workspace = true
rmcp = { version = "0.10", optional = true, features = ["server", "client", "transport-child-process", "transport-async-rw", "transport-sse-server"] }

[dev-dependencies]
tempfile.workspace = true
