[package]
name = "csa-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
codex-pty-fork = []

[dependencies]
csa-core.workspace = true
csa-resource.workspace = true
tokio.workspace = true
libc.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
