[package]
name = "csa-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
codex-pty-fork = ["dep:nix", "dep:portable-pty", "dep:regex", "dep:rusqlite"]

[dependencies]
csa-core.workspace = true
csa-resource.workspace = true
tokio.workspace = true
libc.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
nix = { version = "0.29", optional = true, features = ["signal", "term", "process", "fs"] }
portable-pty = { version = "0.8", optional = true }
regex = { workspace = true, optional = true }
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }

[dev-dependencies]
tempfile.workspace = true
