[package]
name = "csa-resource"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
csa-core.workspace = true
sysinfo.workspace = true
toml.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true
libc.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
