[package]
name = "csa-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
csa-core.workspace = true
csa-acp = { path = "../csa-acp" }
csa-lock.workspace = true
csa-config.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
sha2.workspace = true
data-encoding = "2.6"

[dev-dependencies]
tempfile.workspace = true
