[package]
name = "csa-todo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
csa-session.workspace = true
fd-lock.workspace = true
tempfile.workspace = true
toml.workspace = true
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
